# wigeon

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
docs/src/: intersections.txt
include/geomalia/: circle2d.h  distances.h  geomalia.h  intersections.h  isinside.h  line2d.h  linesegment2d.h  point1d.h  point2d.h  point3d.h  polygon2d.h  ray2d.h  rectangle2d.h  rotations.h  vector1d.h  vector2d.h  vector3d.h  winding_number.h
include/geometry/: circle2d.h  distances.h  geometry.h  isinside.h  line2d.h  linesegment2d.h  point2d.h  polygon2d.h  ray2d.h  rectangle2d.h  rotations.h  vector2d.h  winding_number.h
include/wigeon/: area2d.h  binarytree2d.h  boundingbox2d.h  circle2d.h  collections.h  collisions.h  concepts.h  concepts2d.h  crossingpoints.h  distances.h  doublelinesegment2d.h  intersections.h  intersections2.h  isinside.h  line2d.h  linesegment2d.h  offset.h  point1d.h  point2d.h  point3d.h  polygon2d.h  polygon2d_simplification.h  polyline2d.h  printer.h  ray2d.h  rectangle2d.h  rotations.h  rotations2d.h  svg.h  triangle2d.h  vector1d.h  vector2d.h  vector3d.h  wigeon.h  winding_number.h  within.h
src/: CMakeLists.txt  area2d.cpp  binarytree2d.cpp  boundingbox2d.cpp  circle2d.cc  circle2d.cpp  collisions.cc  collisions.cpp  concepts.cpp  concepts2d.cpp  crossingpoints.cpp  distances.cc  distances.cpp  doublelinesegment2d.cpp  intersections.cc  intersections.cpp  intersections2.cpp  isinside.cc  isinside.cpp  line2d.cc  line2d.cpp  linesegment2d.cc  linesegment2d.cpp  offset.cc  offset.cpp  point1d.cc  point1d.cpp  point2d.cc  point2d.cpp  point3d.cc  point3d.cpp  polygon2d.cc  polygon2d.cpp  polygon2d_simplification.cpp  polyline2d.cpp  printer.cc  printer.cpp  ray2d.cc  ray2d.cpp  rectangle2d.cc  (+15 more)
src/rotations/: CMakeLists.txt  rotations.cc  rotations.cpp
src/tests/: CMakeLists.txt  test_rotations.cpp
tests/: CMakeLists.txt  test_area.cpp  test_binarytree.cpp  test_boundingbox2d.cpp  test_circle2d.cpp  test_collections.cpp  test_collisions.cpp  test_concepts.cpp  test_crossingpoints.cpp  test_distances.cpp  test_intersections.cpp  test_intersections2.cpp  test_isinside.cpp  test_line2d.cpp  test_linesegment2d.cpp  test_offset.cpp  test_point1d.cpp  test_point2d.cpp  test_point3d.cpp  test_polygon.cpp  test_polygon2d.cpp  test_polygon2d_simplification.cpp  test_polyline.cpp  test_polyline2d.cpp  test_printer.cpp  test_ray2d.cpp  test_rectangle2d.cpp  test_rotations.cpp  test_rotations2d.cpp  test_svg.cpp  test_triangle2d.cpp  test_vector1d.cpp  test_vector2d.cpp  test_vector3d.cpp  test_within.cpp
